refactor(frontend): restructure translation loader and translation files

--- a/libs/ui-components/src/language-switcher/components/language-overlay/language-overlay.component.html
+++ b/libs/ui-components/src/language-switcher/components/language-overlay/language-overlay.component.html
@@ -5,7 +5,7 @@
 >
   <div class="overlay-content">
     <div class="page-title">
-      <h3>{{ t('languageSwitcher.pageTitle') }}</h3>
+      <h3>{{ t('langswitcher.PAGE_TITLE') }}</h3>
       <mat-icon class="close-overlay" (click)="toggleLanguageOverlay()"
         >close</mat-icon
       >
@@ -28,7 +28,7 @@
     </section>
 
     <button mat-button (click)="toggleLanguageOverlay()">
-      {{ t('languageSwitcher.close') }}
+      {{ t('langswitcher.CLOSE') }}
     </button>
   </div>
 </main>
