--- a/libs/ui-components/src/language-switcher/language-switcher.component.html
+++ b/libs/ui-components/src/language-switcher/language-switcher.component.html
@@ -5,7 +5,7 @@
 >
   <div class="active-lang">
     <img class="flag" [src]="activeLanguage().flag" alt="" />
-    <div>{{ t('languageSwitcher.languageLabel') }}</div>
+    <div>{{ t('langswitcher.LANGUAGE_LABEL') }}</div>
   </div>
 
   <mat-icon>keyboard_arrow_right</mat-icon>
