--- a/libs/ui-components/src/stage/stage.component.html
+++ b/libs/ui-components/src/stage/stage.component.html
@@ -1,8 +1,8 @@
 <section class="stage-container" *transloco="let t">
   <div class="stage-content">
     <div class="text-container">
-      <h1 class="stage-title">{{ t('stage.title') }}</h1>
-      <p class="stage-description">{{ t('stage.description') }}</p>
+      <h1 class="stage-title">{{ t('stage.TITLE') }}</h1>
+      <p class="stage-description">{{ t('stage.DESCRIPTION') }}</p>
     </div>
     <div class="image-container">
       <img
