--- a/libs/ui-components/src/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/toolbar/toolbar.component.html
@@ -1,26 +1,26 @@
 <mat-toolbar *transloco="let t" class="header-toolbar">
   <div class="header-toolbar__left">
     <div class="title-bar__logo">
-      <h1>{{ t('app.company') }}</h1>
+      <h1>{{ t('toolbar.COMPANY') }}</h1>
     </div>
     <div class="title-bar__titles">
-      <h1 class="main-title">{{ t('toolbar.main-title') }}</h1>
-      <p class="sub-title">{{ t('toolbar.sub-title') }}<sup>®</sup></p>
+      <h1 class="main-title">{{ t('toolbar.MAIN_TITLE') }}</h1>
+      <p class="sub-title">{{ t('toolbar.SUB_TITLE') }}<sup>®</sup></p>
     </div>
   </div>
   <div class="header-toolbar__right">
     <div class="header-toolbar__menu">
       <button class="">
         <mat-icon aria-hidden="false" fontIcon="mail"></mat-icon>
-        <span>{{ t('toolbar.contact') }}</span>
+        <span>{{ t('toolbar.CONTACT') }}</span>
       </button>
       <button>
         <mat-icon aria-hidden="false" fontIcon="shopping_cart"></mat-icon>
-        <span>{{ t('toolbar.cart') }}</span>
+        <span>{{ t('toolbar.CART') }}</span>
       </button>
       <button>
         <mat-icon aria-hidden="false" fontIcon="login"></mat-icon>
-        <span>{{ t('toolbar.login') }}</span>
+        <span>{{ t('toolbar.LOGIN') }}</span>
       </button>
       <button (click)="toggleOverlay()">
         <mat-icon aria-hidden="false" fontIcon="more_vert"></mat-icon>
