--- a/apps/iaimc-frontend/src/app/app.component.html
+++ b/apps/iaimc-frontend/src/app/app.component.html
@@ -2,5 +2,5 @@
   <app-toolbar></app-toolbar>
   <app-stage></app-stage>
   <app-model-list></app-model-list>
-  <app-footer />
+  <!-- <app-footer /> -->
 </div>
