--- a/libs/ui-components/src/model-list/model-list.component.html
+++ b/libs/ui-components/src/model-list/model-list.component.html
@@ -4,25 +4,27 @@
   ></app-model-upload>
 
   @if (uploadedModels.length) {
-    <div class="model_list">
-      @for (model of uploadedModels; track model.url) {
-        <mat-card class="model_card">
-          <app-model-viewer [modelUrl]="model.url"></app-model-viewer>
-          <mat-card-header>
-            <mat-card-title>{{ model.name | slice: -20 }}</mat-card-title>
-            <mat-card-subtitle>
-              <mat-icon class="status_icon">cloud_done</mat-icon>
-              <span>{{ 'modellist.UPLOADED' | transloco }}</span>
-            </mat-card-subtitle>
-          </mat-card-header>
-          <mat-card-content>
-            <div class="card_footer">
-              <span class="material_badge">{{ model.material }}</span>
-              <span class="date">{{ model.uploadDate | date: 'short' }}</span>
-            </div>
-          </mat-card-content>
-        </mat-card>
-      }
+    <div class="card_container">
+      <div class="model_list">
+        @for (model of uploadedModels; track model.url) {
+          <mat-card class="model_card">
+            <app-model-viewer [modelUrl]="model.url"></app-model-viewer>
+            <mat-card-header>
+              <mat-card-title>{{ model.name | slice: -20 }}</mat-card-title>
+              <mat-card-subtitle>
+                <mat-icon class="status_icon">cloud_done</mat-icon>
+                <span>{{ 'modellist.UPLOADED' | transloco }}</span>
+              </mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content>
+              <div class="card_footer">
+                <span class="material_badge">{{ model.material }}</span>
+                <span class="date">{{ model.uploadDate | date: 'short' }}</span>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        }
+      </div>
     </div>
   } @else {
     <div class="placeholder_message">
