--- a/libs/ui-components/src/model-list/model-list.component.scss
+++ b/libs/ui-components/src/model-list/model-list.component.scss
@@ -3,6 +3,7 @@ main {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     width: 100%;
+    gap: 1.5rem;
     max-width: 1000px;
     margin-top: 1.5rem;
   }
@@ -13,6 +14,7 @@ main {
     .model_card {
       display: flex;
       flex-direction: column;
+
       border-radius: 12px;
       overflow: hidden;
       transition: transform 0.2s ease-in-out;
