feat(backend): integrated the frontend to the backend

--- a/libs/ui-components/src/footer/footer.component.html
+++ b/libs/ui-components/src/footer/footer.component.html
@@ -37,7 +37,7 @@
             </div>
             <mat-form-field class="form-input">
               <textarea
-                formControlName="feedback"
+              [formControl]="getField('comment')"
                 matInput
                 placeholder="What can we improve?"
               ></textarea>
@@ -52,6 +52,7 @@
               mat-button
               [disabled]="ratingForm.invalid"
               class="custom-button submit-rating-button"
+              (click)="submitFeedback()"
             >
               Submit rating
             </button>
