--- a/libs/ui-components/src/thank-you-feedback/thank-you-feedback.component.html
+++ b/libs/ui-components/src/thank-you-feedback/thank-you-feedback.component.html
@@ -1,5 +1,5 @@
 <main class="feedback-container">
-  @if (!submitted()) {
+  @if (!isSubmitted()) {
     <h4>Thank you for your feedback!</h4>
     <p>We would like to learn more about your ideas. May we contact you?</p>
     <form [formGroup]="contactForm">
@@ -8,13 +8,15 @@
           matInput
           type="email"
           placeholder="E-mail"
-          formControlName="email"
+          [formControl]="getField('email')"
         />
         @if (contactForm.get('email')?.hasError('email')) {
           <mat-error> Please enter a valid email address </mat-error>
         }
       </mat-form-field>
-      <button mat-button [disabled]="!contactForm.valid" class="custom-button">
+      <button mat-button [disabled]="!contactForm.valid" class="custom-button"
+      (click)="onSubmitEmail()"
+      >
         Submit
       </button>
     </form>
@@ -28,8 +30,8 @@
       <h2>Thank you for your feedback!</h2>
       <div class="feedback-image">
         <img
-          src="assets/thank-you.png"
-          alt="Feedback submitted successfully"
+          src="thank-you.png"
+          alt="thank you"
           class="success-image"
         />
       </div>
