chore: add prod environment

--- a/libs/ui-components/src/model-list/model-list.component.scss
+++ b/libs/ui-components/src/model-list/model-list.component.scss
@@ -75,6 +75,7 @@ main {
     text-align: center;
     margin-top: 2rem;
     color: #777;
+    margin-bottom: 20rem;
 
     img {
       width: 170px;
