refactor(frontend): import and use upload directory enum and add mouse events

--- a/libs/ui-components/src/model-upload/model-upload.component.html
+++ b/libs/ui-components/src/model-upload/model-upload.component.html
@@ -8,6 +8,9 @@
     <mat-card-content>
       <div
         class="upload_container"
+        [class.dragging]="isDragging()"
+        (dragover)="allowDrop($event)"
+        (dragleave)="onDragLeave($event)"
         (drop)="onDrop($event)"
         (dragover)="allowDrop($event)"
       >
