--- a/libs/ui-components/src/contact-form/contact-form.component.html
+++ b/libs/ui-components/src/contact-form/contact-form.component.html
@@ -21,14 +21,12 @@
           <mat-form-field>
             <mat-label>Last name</mat-label>
             <input matInput formControlName="lastName" />
-            <mat-error
-              *ngIf="
-                contactForm.get('lastName')?.hasError('required') &&
-                contactForm.get('lastName')?.touched
-              "
-            >
-              Last name is required
-            </mat-error>
+            @if (
+              contactForm.get('lastName')?.hasError('required') &&
+              contactForm.get('lastName')?.touched
+            ) {
+              <mat-error> Last name is required </mat-error>
+            }
           </mat-form-field>
         </div>
 
@@ -36,27 +34,27 @@
           <mat-form-field>
             <mat-label>E-mail</mat-label>
             <input matInput formControlName="email" />
-            <mat-error *ngIf="contactForm.get('email')?.touched">
-              <span *ngIf="contactForm.get('email')?.hasError('required')"
-                >Email is required</span
-              >
-              <span *ngIf="contactForm.get('email')?.hasError('email')"
-                >Invalid email format</span
-              >
-            </mat-error>
+            @if (contactForm.get('email')?.touched) {
+              <mat-error>
+                @if (contactForm.get('email')?.hasError('required')) {
+                  <span>Email is required</span>
+                }
+                @if (contactForm.get('email')?.hasError('email')) {
+                  <span>Invalid email format</span>
+                }
+              </mat-error>
+            }
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Company</mat-label>
             <input matInput formControlName="company" />
-            <mat-error
-              *ngIf="
-                contactForm.get('company')?.hasError('required') &&
-                contactForm.get('company')?.touched
-              "
-            >
-              Company is required
-            </mat-error>
+            @if (
+              contactForm.get('company')?.hasError('required') &&
+              contactForm.get('company')?.touched
+            ) {
+              <mat-error> Company is required </mat-error>
+            }
           </mat-form-field>
         </div>
 
@@ -64,27 +62,23 @@
           <mat-form-field class="postal-code">
             <mat-label>Postal code</mat-label>
             <input matInput formControlName="postalCode" />
-            <mat-error
-              *ngIf="
-                contactForm.get('postalCode')?.hasError('required') &&
-                contactForm.get('postalCode')?.touched
-              "
-            >
-              Postal code is required
-            </mat-error>
+            @if (
+              contactForm.get('postalCode')?.hasError('required') &&
+              contactForm.get('postalCode')?.touched
+            ) {
+              <mat-error> Postal code is required </mat-error>
+            }
           </mat-form-field>
 
           <mat-form-field class="country">
             <mat-label>Country</mat-label>
             <input matInput formControlName="country" />
-            <mat-error
-              *ngIf="
-                contactForm.get('country')?.hasError('required') &&
-                contactForm.get('country')?.touched
-              "
-            >
-              Country is required
-            </mat-error>
+            @if (
+              contactForm.get('country')?.hasError('required') &&
+              contactForm.get('country')?.touched
+            ) {
+              <mat-error> Country is required </mat-error>
+            }
           </mat-form-field>
         </div>
 
@@ -116,12 +110,16 @@
             <mat-icon>upload_file</mat-icon>
             Select File
           </button>
-          <p *ngIf="contactForm.get('file')?.value" class="selected-file-name">
-            {{ contactForm.get('file')?.value?.name }}
-          </p>
-          <p *ngIf="fileValidationError" class="error-message">
-            {{ fileValidationError }}
-          </p>
+          @if (contactForm.get('file')?.value) {
+            <p class="selected-file-name">
+              {{ contactForm.get('file')?.value?.name }}
+            </p>
+          }
+          @if (fileValidationError) {
+            <p class="error-message">
+              {{ fileValidationError }}
+            </p>
+          }
         </div>
 
         <div class="terms-agreemnet">
