--- a/libs/ui-components/src/model-upload/model-upload.component.scss
+++ b/libs/ui-components/src/model-upload/model-upload.component.scss
@@ -1,12 +1,13 @@
 .upload_wrapper {
   width: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   align-items: center;
   padding-top: 3rem;
 
   .upload_card {
-    width: 65%;
+    width: 63%;
     border-radius: 0.5rem;
     border: 0.0625rem solid #ddd;
     background-color: #fff;
@@ -46,6 +47,11 @@
       &:hover {
         background-color: #eef5ff;
         border-color: #2563eb;
+      }
+
+      .dragging {
+        border: 2px dashed #1976d2;
+        background-color: rgba(25, 118, 210, 0.1);
       }
 
       input[type='file'] {
