refactor(feat): use angular material tabs for navigation

--- a/libs/ui-components/src/navbar/navbar.component.html
+++ b/libs/ui-components/src/navbar/navbar.component.html
@@ -1,34 +1,32 @@
 <mat-toolbar class="navbar">
-  <button type="button" class="menu_toggle" (click)="toggleMenu()">☰</button>
-  <nav [class.open]="isMenuOpened()">
-    <ul>
-      <li>
-        <a
-          #homeTab
-          [routerLink]="homeRoute()"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          >library</a
-        >
-      </li>
-      <li>
-        <a
-          #configurationsTab
-          [routerLink]="configurationsRoute()"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          >configurations</a
-        >
-      </li>
-      <li>
-        <a
-          #producibilityTab
-          [routerLink]="producibilityRoute()"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
-          >producibility</a
-        >
-      </li>
-    </ul>
-  </nav>
+  <button mat-icon-button class="menu_toggle" (click)="toggleMenu()">☰</button>
+
+  <div [class.open]="isMenuOpened()">
+    <nav mat-tab-nav-bar>
+      <a
+        mat-tab-link
+        [routerLink]="homeRoute()"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >
+        Library
+      </a>
+      <a
+        mat-tab-link
+        [routerLink]="configurationsRoute()"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >
+        Configurations
+      </a>
+      <a
+        mat-tab-link
+        [routerLink]="producibilityRoute()"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >
+        Producibility
+      </a>
+    </nav>
+  </div>
 </mat-toolbar>
