--- a/libs/ui-components/src/navbar/navbar.component.scss
+++ b/libs/ui-components/src/navbar/navbar.component.scss
@@ -1,16 +1,14 @@
 @use '@angular/material' as mat;
 
 .navbar {
-  @include mat.toolbar-overrides(
-    (
-      container-background-color: var(--mat-sys-primary),
-    )
-  );
+  @include mat.toolbar-overrides((container-background-color: var(--mat-sys-primary)));
 
   & {
-    padding: 0.625rem;
     display: flex;
+    align-items: center;
     justify-content: center;
+    padding: 0.5rem;
+    position: relative;
   }
 
   .menu_toggle {
@@ -18,58 +16,49 @@
     background: none;
     border: none;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     cursor: pointer;
-  }
-
-  ul {
-    list-style: none;
-    display: flex;
-    gap: 1.25rem;
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    position: relative;
-    cursor: pointer;
-  }
-
-  a {
-    text-decoration: none;
-    color: white;
-    font-size: 0.9rem;
-    font-weight: 700;
-    padding: 0.625rem;
-    position: relative;
-    text-transform: uppercase;
-  }
-
-  a::after {
-    content: '';
     position: absolute;
-    left: 50%;
-    bottom: -0.125rem;
-    width: 0;
-    height: 0.125rem;
-    background-color: white;
-    transition:
-      width 0.3s ease-in-out,
-      left 0.3s ease-in-out;
+    left: 1rem;
+  }
+}
+
+div {
+  @include mat.tabs-overrides((divider-color:var(--mat-sys-primary)));
+
+  & {
+    display: flex;
+    justify-content: center;
+    width: auto;
+
   }
 
-  a.active::after {
-    width: 100%;
-    left: 0;
+  .mat-tab-nav-bar {
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+    width: auto;
   }
 
-  a:hover::after {
-    width: 100%;
-    left: 0;
+  .mat-tab-nav-bar {
+    text-decoration: none;
+    font-size: 0.85rem;
+    font-weight: 600;
+    padding: 0.5rem;
+    text-transform: uppercase;
+
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+
+  a.active {
+    border-bottom: 2px solid white;
+    color: white !important;
   }
 
   @media (max-width: 768px) {
-    .menu-toggle {
+    .menu_toggle {
       display: block;
     }
 
@@ -82,15 +71,8 @@
       display: none;
       flex-direction: column;
       align-items: center;
-      gap: 1rem;
-      padding: 1rem;
+      padding: 0.75rem;
       transition: all 0.3s ease-in-out;
-
-      ul {
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-      }
     }
 
     nav.open {
