chore: integrate translation to navbar

--- a/libs/ui-components/src/navbar/navbar.component.html
+++ b/libs/ui-components/src/navbar/navbar.component.html
@@ -9,7 +9,7 @@
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
-        Library
+        {{ 'nav.LIBRARY' | transloco }}
       </a>
       <a
         mat-tab-link
@@ -17,7 +17,7 @@
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
-        Configurations
+        {{ 'nav.CONFIGURATIONS' | transloco }}
       </a>
       <a
         mat-tab-link
@@ -25,7 +25,7 @@
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
-        Producibility
+        {{ 'nav.PRODUCIBILITY' | transloco }}
       </a>
     </nav>
   </div>
