fix(frontend): fix route

--- a/libs/ui-components/src/navbar/navbar.component.html
+++ b/libs/ui-components/src/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       </a>
       <a
         mat-tab-link
-        [routerLink]="['/', configurationsRoute()]"
+        [routerLink]="configurationsRoute()"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
@@ -21,7 +21,7 @@
       </a>
       <a
         mat-tab-link
-        [routerLink]="['/', producibilityRoute()]"
+        [routerLink]="producibilityRoute()"
         routerLinkActive="active"
         [routerLinkActiveOptions]="{ exact: true }"
       >
