style(frontend): apply style

--- a/libs/ui-components/src/navbar/navbar.component.scss
+++ b/libs/ui-components/src/navbar/navbar.component.scss
@@ -1,11 +1,8 @@
 @use '@angular/material' as mat;
 
 .navbar {
-  @include mat.toolbar-overrides(
-    (
-      container-background-color: var(--mat-sys-on-secondary-fixed),
-    )
-  );
+  @include mat.toolbar-overrides((container-background-color: var(--mat-sys-on-secondary-fixed),
+    ));
 
   & {
     display: flex;
@@ -28,9 +25,7 @@
 }
 
 div {
-  @include mat.tabs-overrides(
-    (
-      active-label-text-color: white,
+  @include mat.tabs-overrides((active-label-text-color: white,
       inactive-label-text-color: white,
       active-hover-label-text-color: white,
       inactive-hover-label-text-color: white,
@@ -38,13 +33,13 @@ div {
       active-focus-label-text-color: white,
       active-indicator-color: white,
       divider-color: var(--mat-sys-on-secondary-fixed),
-    )
-  );
+    ));
 
   & {
     display: flex;
     justify-content: center;
     width: auto;
+    text-transform: uppercase;
   }
 
   .mat-tab-nav-bar {
@@ -57,9 +52,8 @@ div {
   .mat-tab-link {
     text-decoration: none;
     font-size: 0.85rem;
-    font-weight: 600;
     padding: 0.5rem;
-    text-transform: uppercase;
+
   }
 
   a.active {
