refactor(frontend):refactor styles, storage keys and cors

--- a/libs/ui-components/src/model-list/model-list.component.scss
+++ b/libs/ui-components/src/model-list/model-list.component.scss
@@ -20,7 +20,7 @@ $badge-font-size: 0.75rem;
 $placeholder-font-size: 0.8rem;
 
 
-$color-primary: #007bff;
+$color-primary: #42008a;
 $color-success: #4caf50;
 $color-text-secondary: #666;
 $color-text-tertiary: #777;
