--- a/libs/ui-components/src/footer/footer.component.scss
+++ b/libs/ui-components/src/footer/footer.component.scss
@@ -2,11 +2,10 @@
 
 $rate-active: #ffcc00;
 $rate-hover: #ffdd44;
-@mixin flex-option(
-  $display: flex,
+
+@mixin flex-option($display: flex,
   $justify-content: center,
-  $align-items: center
-) {
+  $align-items: center) {
   display: $display;
   justify-content: $justify-content;
   align-items: $align-items;
@@ -15,18 +14,17 @@ $rate-hover: #ffdd44;
 mat-toolbar {
   height: auto;
 
-  @include mat.toolbar-overrides(
-    (
-      container-background-color: var(--mat-sys-on-secondary-fixed),
+  @include mat.toolbar-overrides((container-background-color: var(--mat-sys-on-secondary-fixed),
       container-text-color: var(--mat-sys-primary-container),
-    )
-  );
+    ));
+
   footer {
     width: 100%;
     @include flex-option();
     flex-direction: column;
     gap: 1rem;
     padding: 3rem 0 1rem 0;
+
     span,
     p,
     a {
@@ -37,22 +35,28 @@ mat-toolbar {
       width: 50%;
       @include flex-option(flex, space-between, left);
       gap: 1.5rem;
+
       .custom-button {
         color: var(--mat-sys-primary);
         width: 50%;
+
         &:disabled {
           color: var(--mat-sys-primary-container);
         }
       }
+
       .contact-us {
         width: 20rem;
+
         .contact {
           &__tel {
             padding-left: 0.8rem;
           }
+
           a {
             color: var(--mat-sys-primary-container);
             text-decoration: none;
+
             &:hover {
               color: var(--mat-sys-primary);
             }
@@ -64,39 +68,45 @@ mat-toolbar {
           flex-direction: column;
         }
       }
+
       .rating-container {
         @include flex-option();
         flex-direction: column;
+
         &__wrapper {
           width: 20rem;
           @include flex-option(flex, left, left);
           flex-direction: column;
           gap: 1rem;
         }
-        @include mat.progress-spinner-overrides(
-          (
-            active-indicator-color: var(--mat-sys-primary),
-          )
-        );
+
+        @include mat.progress-spinner-overrides((active-indicator-color: var(--mat-sys-primary),
+          ));
+
         .rating-stars {
           display: flex;
           gap: 0.5rem;
           cursor: pointer;
+
           mat-icon {
             font-size: 2.25rem;
             width: 100%;
             height: 100%;
             @include flex-option();
+
             &.filled {
               color: $rate-active;
             }
+
             &.hovered {
               color: $rate-hover;
             }
           }
         }
+
         mat-form-field {
           width: 100%;
+
           textarea {
             resize: none;
           }
