--- a/libs/ui-components/src/model-upload/model-upload.component.scss
+++ b/libs/ui-components/src/model-upload/model-upload.component.scss
@@ -1,3 +1,5 @@
+@use '@angular/material' as mat;
+
 .upload_wrapper {
   width: 100%;
   display: flex;
@@ -84,7 +86,7 @@
       }
 
       button[mat-raised-button] {
-        background-color: #2563eb;
+        background-color: var(--mat-sys-on-secondary-fixed);
         color: white;
         border: none;
         border-radius: 0.3125rem;
@@ -94,7 +96,7 @@
         margin-top: 0.625rem;
 
         &:hover {
-          background-color: #1c4fc6;
+          background-color: #560da4;
         }
       }
 
