chore: increase model scale

--- a/libs/ui-components/src/model-upload/model-upload.component.scss
+++ b/libs/ui-components/src/model-upload/model-upload.component.scss
@@ -48,7 +48,8 @@
 
       &:hover {
         background-color: #eef5ff;
-        border-color: #2563eb;
+        border-color: var(--mat-sys-on-secondary-fixed);
+        ;
       }
 
       .dragging {
