chore: apply prettier to style sheets

--- a/libs/ui-components/src/model-list/model-list.component.scss
+++ b/libs/ui-components/src/model-list/model-list.component.scss
@@ -169,7 +169,6 @@ main {
   }
 }
 
-
 @media (max-height: 700px) {
   main {
     .model_list {
@@ -181,7 +180,7 @@ main {
 @media only screen and (max-height: 700px) {
   main {
     .model_list {
-      margin: 40px auto
+      margin: 40px auto;
     }
   }
 }
