--- a/libs/ui-components/src/model-upload/model-upload.component.scss
+++ b/libs/ui-components/src/model-upload/model-upload.component.scss
@@ -43,7 +43,9 @@
       margin-bottom: 1.25rem;
       width: 100%;
       min-height: 12.5rem;
-      transition: background-color 0.3s ease, border-color 0.3s ease;
+      transition:
+        background-color 0.3s ease,
+        border-color 0.3s ease;
       text-align: center;
 
       &:hover {
