fix(frontend): clear file input after upload to allow subsequent file selections

--- a/libs/ui-components/src/model-upload/model-upload.component.html
+++ b/libs/ui-components/src/model-upload/model-upload.component.html
@@ -30,6 +30,7 @@
           (change)="onFileSelected($event)"
           accept=".stl"
           title="Upload CAD model"
+          #fileInput
         />
 
         @if (!uploading()) {
