--- a/libs/ui-components/src/toolbar/toolbar.component.html
+++ b/libs/ui-components/src/toolbar/toolbar.component.html
@@ -29,7 +29,7 @@
       </button>
     </div>
     <div mat-button class="humberger__menu">
-      <button>
+      <button (click)="toggleOverlay()">
         <mat-icon aria-hidden="false" fontIcon="menu"></mat-icon>
       </button>
     </div>
