refactor(frontend): apply prettier

--- a/libs/ui-components/src/model/components/model-list/model-list.component.scss
+++ b/libs/ui-components/src/model/components/model-list/model-list.component.scss
@@ -62,6 +62,7 @@ main {
     mat-card-title {
       font-size: $title-font-size;
       font-weight: bold;
+      font-family: 'Roboto', sans-serif;
 
       @media (max-width: 600px) {
         font-size: 0.9rem;
