--- a/apps/iaimc-frontend/src/styles/stylestheme.scss
+++ b/apps/iaimc-frontend/src/styles/stylestheme.scss
@@ -1,5 +1,9 @@
 /* Note: Color palettes are generated from primary: #7F00FF */
 html {
+  /* CUSTOM VARIABLES */
+  --toolbar-height: 50px;
+  --navbar-height: 64px;
+
   /* COLOR SYSTEM VARIABLES */
   color-scheme: light;
 
