--- a/libs/ui-components/src/footer/footer.component.scss
+++ b/libs/ui-components/src/footer/footer.component.scss
@@ -115,11 +115,18 @@ mat-toolbar {
         mat-form-field {
           width: 100%;
           textarea {
+            color: var(--mat-sys-on-primary);
             resize: none;
           }
         }
       }
     }
+  }
+}
+
+@media only screen and (max-height: 700px) {
+  .form-group {
+    width: 70% !important;
   }
 }
 
